--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -51,8 +51,7 @@ jobs:
 
   continuous-deployment:
     machine: true
-    resource_class: sushanth/ner-bert
-    environment:
+    resource_class: sushanth/ner
       REPOSITORY: ner-bert
       GAR_IMAGE_NAME: ner-bert
       IMAGE_TAG: latest
